@@ -88,9 +88,11 @@ public:
   virtual Description getOutputDescription() const;
 
   /** Accessor for the output mesh */
+  virtual void setInputMesh(const Mesh & inputMesh);
   virtual Mesh getInputMesh() const;
 
   /** Accessor for the output mesh */
+  virtual void setOutputMesh(const Mesh & outputMesh);
   virtual Mesh getOutputMesh() const;
 
   /** Get the i-th marginal function */
