@@ -129,7 +129,16 @@ TimeSeries CompositeProcess::getFuture(const UnsignedInteger stepNumber) const
   /* TimeGrid associated with the possible future */
   const Scalar timeStep = timeGrid.getStep();
   const RegularGrid futurTimeGrid(timeGrid.getEnd(), timeStep, stepNumber);
-  return TimeSeries(futurTimeGrid, function_(antecedent_.getFuture(stepNumber).getValues()));
+  FieldFunction function(function_);
+  try
+  {
+    function.setInputMesh(futurTimeGrid);
+  }
+  catch (NotYetImplementedException &)
+  {
+    throw InternalException(HERE) << "Error: can only ask future of a process with a point-wise function";
+  }
+  return TimeSeries(futurTimeGrid, function(antecedent_.getFuture(stepNumber).getValues()));
 }
 
 /* Get the marginal random vector corresponding to indices components */
