@@ -137,6 +137,19 @@ OT_FieldFunction_getMarginal_doc
 
 // ---------------------------------------------------------------------
 
+%define OT_FieldFunction_setInputMesh_doc
+"Set the mesh associated to the input domain.
+
+Parameters
+----------
+inputMesh : :class:`~openturns.Mesh`
+    The input mesh :math:`\cM_{N'}`."
+%enddef
+%feature("docstring") OT::FieldFunctionImplementation::setInputMesh
+OT_FieldFunction_setInputMesh_doc
+
+// ---------------------------------------------------------------------
+
 %define OT_FieldFunction_getInputMesh_doc
 "Get the mesh associated to the input domain.
 
@@ -147,6 +160,19 @@ inputMesh : :class:`~openturns.Mesh`
 %enddef
 %feature("docstring") OT::FieldFunctionImplementation::getInputMesh
 OT_FieldFunction_getInputMesh_doc
+
+// ---------------------------------------------------------------------
+
+%define OT_FieldFunction_setOutputMesh_doc
+"Set the mesh associated to the output domain.
+
+Parameters
+----------
+outputMesh : :class:`~openturns.Mesh`
+    The output mesh :math:`\cM_{N'}`."
+%enddef
+%feature("docstring") OT::FieldFunctionImplementation::setOutputMesh
+OT_FieldFunction_setOutputMesh_doc
 
 // ---------------------------------------------------------------------
 
